src/ffi/ps2000a/ps2000a.rs

extern "C" {
    pub fn ps2000aSetSigGenBuiltInV2(handle: i16, offsetVoltage: i32,
                                     pkToPk: u32, waveType: i16,
                                     startFrequency: f64, stopFrequency: f64,
                                     increment: f64, dwellTime: f64,
                                     sweepType: PS2000A_SWEEP_TYPE,
                                     operation: PS2000A_EXTRA_OPERATIONS,
                                     shots: u32, sweeps: u32,
                                     triggerType: PS2000A_SIGGEN_TRIG_TYPE,
                                     triggerSource:
                                         PS2000A_SIGGEN_TRIG_SOURCE,
                                     extInThreshold: i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetSigGenPropertiesArbitrary(handle: i16,
                                               startDeltaPhase: u32,
                                               stopDeltaPhase: u32,
                                               deltaPhaseIncrement: u32,
                                               dwellCount: u32,
                                               sweepType: PS2000A_SWEEP_TYPE,
                                               shots: u32, sweeps: u32,
                                               triggerType:
                                                   PS2000A_SIGGEN_TRIG_TYPE,
                                               triggerSource:
                                                   PS2000A_SIGGEN_TRIG_SOURCE,
                                               extInThreshold: i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetSigGenPropertiesBuiltIn(handle: i16, startFrequency: f64,
                                             stopFrequency: f64,
                                             increment: f64, dwellTime: f64,
                                             sweepType: PS2000A_SWEEP_TYPE,
                                             shots: u32, sweeps: u32,
                                             triggerType:
                                                 PS2000A_SIGGEN_TRIG_TYPE,
                                             triggerSource:
                                                 PS2000A_SIGGEN_TRIG_SOURCE,
                                             extInThreshold: i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSigGenFrequencyToPhase(handle: i16, frequency: f64,
                                         indexMode: PS2000A_INDEX_MODE,
                                         bufferLength: u32, phase: *mut u32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSigGenArbitraryMinMaxValues(handle: i16,
                                              minArbitraryWaveformValue:
                                                  *mut i16,
                                              maxArbitraryWaveformValue:
                                                  *mut i16,
                                              minArbitraryWaveformSize:
                                                  *mut u32,
                                              maxArbitraryWaveformSize:
                                                  *mut u32) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSigGenSoftwareControl(handle: i16, state: i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetEts(handle: i16, mode: PS2000A_ETS_MODE, etsCycles: i16,
                         etsInterleave: i16, sampleTimePicoseconds: *mut i32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetSimpleTrigger(handle: i16, enable: i16,
                                   source: PS2000A_CHANNEL, threshold: i16,
                                   direction: PS2000A_THRESHOLD_DIRECTION,
                                   delay: u32, autoTrigger_ms: i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetTriggerDigitalPortProperties(handle: i16,
                                                  directions:
                                                      *mut PS2000A_DIGITAL_CHANNEL_DIRECTIONS,
                                                  nDirections: i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetDigitalAnalogTriggerOperand(handle: i16,
                                                 operand:
                                                     PS2000A_TRIGGER_OPERAND)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetPulseWidthDigitalPortProperties(handle: i16,
                                                     directions:
                                                         *mut PS2000A_DIGITAL_CHANNEL_DIRECTIONS,
                                                     nDirections: i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetTriggerChannelProperties(handle: i16,
                                              channelProperties:
                                                  *mut PS2000A_TRIGGER_CHANNEL_PROPERTIES,
                                              nChannelProperties: i16,
                                              auxOutputEnable: i16,
                                              autoTriggerMilliseconds: i32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetTriggerChannelConditions(handle: i16,
                                              conditions:
                                                  *mut PS2000A_TRIGGER_CONDITIONS,
                                              nConditions: i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetTriggerChannelDirections(handle: i16,
                                              channelA:
                                                  PS2000A_THRESHOLD_DIRECTION,
                                              channelB:
                                                  PS2000A_THRESHOLD_DIRECTION,
                                              channelC:
                                                  PS2000A_THRESHOLD_DIRECTION,
                                              channelD:
                                                  PS2000A_THRESHOLD_DIRECTION,
                                              ext:
                                                  PS2000A_THRESHOLD_DIRECTION,
                                              aux:
                                                  PS2000A_THRESHOLD_DIRECTION)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetTriggerDelay(handle: i16, delay: u32) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetPulseWidthQualifier(handle: i16,
                                         conditions:
                                             *mut PS2000A_PWQ_CONDITIONS,
                                         nConditions: i16,
                                         direction:
                                             PS2000A_THRESHOLD_DIRECTION,
                                         lower: u32, upper: u32,
                                         type_: PS2000A_PULSE_WIDTH_TYPE)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aIsTriggerOrPulseWidthQualifierEnabled(handle: i16,
                                                        triggerEnabled:
                                                            *mut i16,
                                                        pulseWidthQualifierEnabled:
                                                            *mut i16)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetTriggerTimeOffset(handle: i16, timeUpper: *mut u32,
                                       timeLower: *mut u32,
                                       timeUnits: *mut PS2000A_TIME_UNITS,
                                       segmentIndex: u32) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetTriggerTimeOffset64(handle: i16, time: *mut i64,
                                         timeUnits: *mut PS2000A_TIME_UNITS,
                                         segmentIndex: u32) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetValuesTriggerTimeOffsetBulk(handle: i16,
                                                 timesUpper: *mut u32,
                                                 timesLower: *mut u32,
                                                 timeUnits:
                                                     *mut PS2000A_TIME_UNITS,
                                                 fromSegmentIndex: u32,
                                                 toSegmentIndex: u32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetValuesTriggerTimeOffsetBulk64(handle: i16,
                                                   times: *mut i64,
                                                   timeUnits:
                                                       *mut PS2000A_TIME_UNITS,
                                                   fromSegmentIndex: u32,
                                                   toSegmentIndex: u32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetNoOfCaptures(handle: i16, nCaptures: *mut u32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetNoOfProcessedCaptures(handle: i16,
                                           nProcessedCaptures: *mut u32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetDataBuffer(handle: i16, channelOrPort: i32,
                                buffer: *mut i16, bufferLth: i32,
                                segmentIndex: u32, mode: PS2000A_RATIO_MODE)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetDataBuffers(handle: i16, channelOrPort: i32,
                                 bufferMax: *mut i16, bufferMin: *mut i16,
                                 bufferLth: i32, segmentIndex: u32,
                                 mode: PS2000A_RATIO_MODE) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetEtsTimeBuffer(handle: i16, buffer: *mut i64,
                                   bufferLth: i32) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aSetEtsTimeBuffers(handle: i16, timeUpper: *mut u32,
                                    timeLower: *mut u32, bufferLth: i32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aIsReady(handle: i16, ready: *mut i16) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aRunBlock(handle: i16, noOfPreTriggerSamples: i32,
                           noOfPostTriggerSamples: i32, timebase: u32,
                           oversample: i16, timeIndisposedMs: *mut i32,
                           segmentIndex: u32, lpReady: ps2000aBlockReady,
                           pParameter: *mut ::std::os::raw::c_void)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aRunStreaming(handle: i16, sampleInterval: *mut u32,
                               sampleIntervalTimeUnits: PS2000A_TIME_UNITS,
                               maxPreTriggerSamples: u32,
                               maxPostPreTriggerSamples: u32, autoStop: i16,
                               downSampleRatio: u32,
                               downSampleRatioMode: PS2000A_RATIO_MODE,
                               overviewBufferSize: u32) -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetStreamingLatestValues(handle: i16,
                                           lpPs2000aReady:
                                               ps2000aStreamingReady,
                                           pParameter:
                                               *mut ::std::os::raw::c_void)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aNoOfStreamingValues(handle: i16, noOfValues: *mut u32)
     -> PICO_STATUS;
}
extern "C" {
    pub fn ps2000aGetMaxDownSampleRatio(handle: i16,
                                        noOfUnaggreatedSamples: u32,
                                        maxDownSampleRatio: *mut u32,
                                        downSampleRatioMode:
                                            PS2000A_RATIO_MODE,
                                        segmentIndex: u32) -> PICO_STATUS;
}
